welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:33: error: not found: value faireMotif
faireMotif(Color.red)
^FlowerPot:34: error: not found: value faireMotif
faireMotif(Color.blue)
^FlowerPot:35: error: not found: value faireMotif
faireMotif(Color.green)
^FlowerPot:36: error: not found: value faireMotif
faireMotif(Color.yellow)
^