welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
//Decouper en 4 quarts avec la croix centrale à faire à part

def growFlowers() 
{
	baisseBrosse()
	avance(2)
	recule()
	gauche()
	avance()
	recule(2)
	avance()
	droite()
	
	
	
}













def Motif()
{	
faireMotif(Color.red)
faireMotif(Color.blue)
faireMotif(Color.green)
faireMotif(Color.yellow)
}